--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <script src="./dist/main.js"></script>
+    <script src="./dist/main.js" defer></script>
     <title>Chanpion Analytics</title>
   </head>
   <body>
-
     <div id="root"></div>
+    <button class="weapons">Add Infinity Edge</button>
+    <select id="number-select"></select>
+    <p id="champ-stats"></p>
   </body>
 </html>
