worked on project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <button class="weapons">Add Infinity Edge</button>
+    <button id="sunfire">Add SunfireCape</button>
     <select id="number-select"></select>
     <p id="champ-stats"></p>
   </body>
