--- a/index.html
+++ b/index.html
@@ -13,5 +13,45 @@
     <button id="sunfire">Add SunfireCape</button>
     <select id="number-select"></select>
     <p id="champ-stats"></p>
+    <p id="champ_description"></p>
+
+    <div class="circle-button-container">
+      <div class="circle-button" id="passive"></div>
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/passive/Kaisa_Passive.png"
+        alt="Button Image"
+      />
+    </div>
+
+    <div class="circle-button-container">
+      <div class="circle-button" id="abilityQ"></div>
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/spell/KaisaQ.png"
+        alt="Button Image"
+      />
+    </div>
+    <div class="circle-button-container">
+      <div class="circle-button" id="abilityW"></div>
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/spell/KaisaW.png"
+        alt="Button Image"
+      />
+    </div>
+    <div class="circle-button-container">
+      <div class="circle-button" id="abilityE"></div>
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/spell/KaisaE.png"
+        alt="Button Image"
+      />
+    </div>
+    <div class="circle-button-container">
+      <div class="circle-button" id="abilityR"></div>
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/spell/KaisaR.png"
+        alt="Button Image"
+      />
+    </div>
+
+    <p class="ability_description"></p>
   </body>
 </html>
