--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <title>Champion Analytics</title>
   </head>
   <body>
-    
-    <button id="sunfire">Add SunfireCape</button>
+    <img
+      src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/MasterYi_0.jpg"
+      alt=""
+    />
+    <button id="sunfire">
+      <img
+        src="https://ddragon.leagueoflegends.com/cdn/13.1.1/img/item/3068.png"
+        alt=""
+      />
+    </button>
+
     <select id="number-select"></select>
     <p id="champ-stats"></p>
     <p id="champ_description"></p>
