worked on project

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>Champion Analytics</title>
   </head>
   <body>
-    <form>
-      <input type="text" id="search-input" />
-      <input type="submit" value="Search" />
-    </form>
-
+    <div id="form_container">
+      <form>
+        <input type="text" id="search-input" />
+        <input type="submit" value="Search" />
+      </form>
+    </div>
     <div class="main_image_container">
       <img id="main_img" src="" alt="" />
       <img id="backround_img" src="" alt="" />
