--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./dist/main.css" />
+    <link rel="shortcut icon" href="./src/assets/mid.png" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/8f8e6fbefd.js"
       crossorigin="anonymous"
@@ -68,7 +69,7 @@
       <div class="ability_name_description_container">
       <h3 class="ability_name"></h3>
       <p class="ability_description"></p>
-      <video autoplay loop muted="" id="ability_video">
+      <video autoplay loop muted="" id="ability_video" poster="./src/assets/novideo.png">
         <source id="source" src="" type="video/webm" alt="No-Video" />
       </video>
     </div>
