quality of life and css updates

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <i class="fa-solid fa-arrows-rotate"></i>
     <div id="help_paragraph_dive">
       <p id="help_paragraph">
-        Use the Search bar to search for a League of Legends champion or use the
-        refresh icon to generate a random champion. Some champion names include
-        Ezreal, Blitzcrank, Ashe
+        Utilize the search bar to locate a specific champion or use the refresh
+        icon to randomly select one. Explore and become familiar with their
+        statistics. Examples of champions include Ezreal, Blitzcrank, and Ashe.
       </p>
     </div>
 
