Fixed capitalization bug and wukong bug

--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
     <script src="./dist/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
-    <a href="https://github.com/junjiequ1459" target="_blank">
+    <a
+      href="https://github.com/junjiequ1459"
+      target="_blank"
+      class="github_link"
+    >
       <i class="fa-brands fa-github"></i>
     </a>
-    <a href="https://www.linkedin.com/in/junjie-qu-239070169/" target="_blank">
+    <a
+      href="https://www.linkedin.com/in/junjie-qu-239070169/"
+      target="_blank"
+      class="linkedin_link"
+    >
       <i class="fa-brands fa-linkedin"></i>
     </a>
     <title>Champion Analytics</title>
@@ -33,9 +41,10 @@
     <i class="fa-solid fa-arrows-rotate"></i>
     <div id="help_paragraph_dive">
       <p id="help_paragraph">
-        Utilize the search bar to locate a specific champion or use the refresh
-        icon to randomly select one. Explore and become familiar with their
-        statistics. Examples of champions include Ezreal, Blitzcrank, and Ashe.
+        Utilize the search bar to locate a specific champion (case sensitive) or
+        use the refresh icon to randomly select one. Explore and become familiar
+        with their statistics. Examples of champions include Ezreal, Blitzcrank,
+        and Ashe.
       </p>
     </div>
 
