--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p id="help_paragraph">
         Utilize the search bar to locate a specific champion (case sensitive) or
         use the refresh icon to randomly select one. Explore and become familiar
-        with their statistics. Examples of champions include Ezreal, Blitzcrank,
+        with their statistics. Examples of champions include Wukong, Blitzcrank,
         and Ashe.
       </p>
     </div>
