--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <i class="fa-solid fa-arrows-rotate"></i>
     <div id="help_paragraph_dive">
       <p id="help_paragraph">
-        Utilize the search bar to locate a specific champion (case sensitive) or
-        use the refresh icon to randomly select one. Explore and become familiar
+        Utilize &#x1F50D to locate a specific champion (case sensitive) or
+        use &#8635 to randomly select one. Explore and become familiar
         with their statistics. Examples of champions include Wukong, Blitzcrank,
         and Ashe.
       </p>
