made changes to css

--- a/index.html
+++ b/index.html
@@ -62,28 +62,23 @@
     <div class="ability_container">
       <div class="all_circle_container">
         <div class="circle-button-container">
-          <div class="circle-button" id="passive"></div>
-          <img id="passive_icon" src="" alt="Button Image" />
+          <img class="passive_icon" id="passive" src="" alt="Button Image" />
         </div>
 
         <div class="circle-button-container">
-          <div class="circle-button" id="abilityQ"></div>
-          <img id="Q_icon" src="" alt="Button Image" />
+          <img class="Q_icon" id="abilityQ" src="" alt="Button Image" />
         </div>
 
         <div class="circle-button-container">
-          <div class="circle-button" id="abilityW"></div>
-          <img id="W_icon" src="" alt="Button Image" />
+          <img class="W_icon" id="abilityW" src="" alt="Button Image" />
         </div>
 
         <div class="circle-button-container">
-          <div class="circle-button" id="abilityE"></div>
-          <img id="E_icon" src="" alt="Button Image" />
+          <img class="E_icon" id="abilityE" src="" alt="Button Image" />
         </div>
 
         <div class="circle-button-container">
-          <div class="circle-button" id="abilityR"></div>
-          <img id="R_icon" src="" alt="Button Image" />
+          <img class="R_icon" id="abilityR" src="" alt="Button Image" />
         </div>
       </div>
 
@@ -132,6 +127,9 @@
 
       <select id="number-select"></select>
     </div>
+
+    <div class="skin-container-div">
+      <h2>SKINS</h2>
     <div id="skin_container">
       <img
         src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Kaisa_1.jpg"
@@ -140,5 +138,6 @@
       />
       <div id="button_skin_container"></div>
     </div>
+  </div>
   </body>
 </html>
