add placeholder for search

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <body>
     <div id="form_container">
       <form>
-        <input type="text" id="search-input" value="" />
+        <input type="text" id="search-input" value=""
+        placeholder="Search..."
+        />
         <i class="fa-solid fa-magnifying-glass"></i>
       </form>
     </div>
