--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           loop
           muted=""
           id="ability_video"
-          poster="./src/assets/novideo.png"
+          poster=""
         >
           <source id="source" src="" type="video/webm" alt="No-Video" />
         </video>
@@ -134,7 +134,7 @@
       <h2>SKINS</h2>
     <div id="skin_container">
       <img
-        src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Kaisa_1.jpg"
+        src=""
         alt=""
         id="champ_skin"
       />
